--- a/CentralRegister/WebContent/WEB-INF/web.xml
+++ b/CentralRegister/WebContent/WEB-INF/web.xml
@@ -22,6 +22,6 @@
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>Jersey RESTful Application</servlet-name>
-		<url-pattern>/api/v.0.1/*</url-pattern>
+		<url-pattern>/api/v0.1/*</url-pattern>
 	</servlet-mapping>
 </web-app>
