Enable multicast chat with medical staff

--- a/ChatServer/src/pro/artse/chat/util/config.properties
+++ b/ChatServer/src/pro/artse/chat/util/config.properties
@@ -2,7 +2,7 @@ chatServerPort1=10000
 chatServerPort2=10001
 chatServerAddress=127.0.0.1
 chatMulticastAddress=224.0.0.11
-chatMutlicastPort=20000
+chatMulticastPort=20000
 endFlag=#!!!#
 errorFlag=#!!#!
 closeFlag=#!#
